--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -57,14 +57,6 @@ jobs:
     needs: build-docker-image
     runs-on: ubuntu-latest
     steps:
-      - name: set application-prod.properties
-        run: |
-          mkdir -p ~/properties/prod
-          cd ~/properties/prod
-          touch ./application-prod.properties
-          echo "${{ secrets.PROPERTIES }}" > ./application-prod.properties
-        shell: bash
-
       - name: ssh connect & production
         uses: appleboy/ssh-action@master
         with:
@@ -72,6 +64,16 @@ jobs:
           username: ${{secrets.USERNAME}}
           key: ${{secrets.PASSWORD}}
           script: |
+            setup_application_properties() {
+            local env=$1
+            local properties_content=$2
+            mkdir -p ~/properties/$env
+            cd ~/properties/$env
+            touch ./application-$env.properties
+            echo "$properties_content" > ./application-$env.properties
+            }
+            
+            setup_application_properties dev ${{secrets.PROPERTIES}}
             sudo docker login --username ${{secrets.DOCKERHUB_USERNAME}} --password ${{secrets.DOCKERHUB_PASSWORD}}
             sudo docker pull ${{secrets.DOCKERHUB_USERNAME}}/${{secrets.DOCKERHUB_IMAGE}}
             sudo docker ps -q | xargs -r sudo docker stop
