--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -73,7 +73,7 @@ jobs:
             echo "$properties_content" > ./application-$env.properties
             }
             
-            setup_application_properties dev ${{secrets.PROPERTIES}}
+            setup_application_properties prod ${{secrets.PROPERTIES}}
             sudo docker login --username ${{secrets.DOCKERHUB_USERNAME}} --password ${{secrets.DOCKERHUB_PASSWORD}}
             sudo docker pull ${{secrets.DOCKERHUB_USERNAME}}/${{secrets.DOCKERHUB_IMAGE}}
             sudo docker ps -q | xargs -r sudo docker stop
